r300g: handle polygon offset correctly

https://bugs.freedesktop.org/show_bug.cgi?id=29372